hphp/hack/test/typecheck/idx3_5.php.exp
File "idx3_5.php", line 9, characters 12-12:
Invalid argument (Typing[4110])
File "builtins.hhi", line 57, characters 23-30:
This is an object of type Indexish
File "idx3_5.php", line 9, characters 12-12:
It is incompatible with an int
